// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Tree-Row considering permissions for state Should not render state cell without permissions view_details and view_team 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row considering permissions for state Should render empty state cell without permission view_details 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  />
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row considering permissions for state Should render state cell with permission view_details 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row matched/unmatched matched 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row matched/unmatched unmatched 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_unmatched Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  />
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  />
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  />
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  />
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  />
</tr>
`;

exports[`Should render Tree-Row with a shift 0 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with a shift 1 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable"
  style="--level:1"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with a shift 2 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable"
  style="--level:2"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with dashes in owner 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    —
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with dashes in people count 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    —
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with dashes in robots count 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    —
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with dashes in traffic lights 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with state icon with type closed 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-closed","children":{"key":null,"ref":null,"props":{"type":"closed"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with state icon with type develop 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-develop","children":{"key":null,"ref":null,"props":{"type":"develop"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with state icon with type needinfo 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-needinfo","children":{"key":null,"ref":null,"props":{"type":"need-info"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with state icon with type supported 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with tags hide without permission [view_tags] 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with tags show with permission [view_tags] 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
        <div
          class="ServiceTags ServiceTags_inline"
        >
          <span
            class="ServiceTags-Tag"
            style="background-color:rgba(1, 1, 1, 1);color:rgba(255, 255, 255, 1)"
          >
            тэг
          </span>
           
        </div>
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with trafficLights hide without permission [view_traffic_light] 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
</tr>
`;

exports[`Should render Tree-Row with trafficLights show with permission [view_traffic_light] 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    <div>
      PerfectionTrafficLightsConnected mock. Props used: {"trafficLights":[{"id":3852,"group":{"code":"children","id":4,"name":{"ru":"Вложенные сервисы"}},"level":"ok","issuesCount":0},{"id":1706,"group":{"code":"understandability","id":3,"name":{"ru":"Понятность"}},"level":"warning","issuesCount":2}],"serviceId":11}
    </div>
  </td>
</tr>
`;

exports[`Should render Tree-Row with warning icon with type has external members 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:hint-has-external-members","children":{"key":null,"ref":null,"props":{"type":"has-external-members"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with warning icon with type no exportable 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with/without isOpen icon closed icon 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_right Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with/without isOpen icon open icon 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_expandable Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;

exports[`Should render Tree-Row with/without isOpen icon without icon 1`] = `
<tr
  class="AbcTable-Tr Tree-Row Tree-Row_root"
  style="--level:0"
>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_main"
  >
    <div
      class="Tree-MainCellWrapper"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_direction_down Icon_size_xs Icon_type_arrow Tree-Chevron Tree-Chevron_leaf"
      />
      <div
        class="Tree-ServiceNameWrapper"
      >
        <a
          class="Link Link_theme_normal Tree-ServiceName"
          href="/services/testservice/"
        >
          КотикиДелаютКусь
        </a>
         
      </div>
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_owner"
  >
    <a
      class="control link link_theme_black ta-username"
      data-lego="react"
      href="//staff.yandex-team.ru/gnoma"
      tabindex="0"
      target="_blank"
    >
      <span
        class="ta-component ta-username__logo"
        data-lego="react"
      >
        А
      </span>
      нна Сеничкина
    </a>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_state"
  >
    <div>
      ComponentWithTooltip mock. Props used: {"text":"i18n:state-title-supported","children":{"key":null,"ref":null,"props":{"type":"supported"},"_owner":null,"_store":{}}}
    </div>
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_people"
  >
    1001
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_robots"
  >
    11
  </td>
  <td
    class="AbcTable-Td Tree-Cell Tree-Cell_type_perfection"
  >
    —
  </td>
</tr>
`;
